--- a/snippets/cssclasses/banner.css
+++ b/snippets/cssclasses/banner.css
@@ -7,6 +7,10 @@ Author: ElsaTam (Kapirklaa in Discord)
   container: markdown-view/inline-size;
 }
 
+.markdown-preview-section {
+  anchor-name: --anchor-preview-section;
+}
+
 body {
   --banner-height: 300px;
   --banner-title-shadow: 0px 0px 0.1em rgb(var(--mono-rgb-0)), 0px 0px 0.2em rgb(var(--mono-rgb-0)), 0px 0px 0.5em rgb(var(--mono-rgb-0));
@@ -17,7 +21,6 @@ body {
 }
 
 .markdown-preview-view.banner {
-  --metadata-display-reading: none;
   --inline-title-margin-bottom: 0;
 }
 .markdown-preview-view.banner .mod-header + div + div > p > .image-embed:nth-child(1 of .image-embed) {
@@ -38,14 +41,20 @@ body {
 .markdown-preview-view.banner .mod-header + div + div > p > .image-embed:nth-child(1 of .image-embed) + br {
   display: none;
 }
-.markdown-preview-view.banner .mod-header {
-  height: calc(var(--banner-height) - var(--file-margins));
-  padding-bottom: var(--file-margins);
-}
 .markdown-preview-view.banner .inline-title {
   text-shadow: var(--banner-title-shadow);
 }
 
+.markdown-preview-view:not(.show-properties).banner .mod-header {
+  height: calc(var(--banner-height) - var(--file-margins));
+  padding-bottom: var(--file-margins);
+}
+
+@container not style(--metadata-display-reading: none) {
+  .markdown-preview-view.show-properties.banner .metadata-container {
+    margin-top: calc(var(--banner-height) - var(--file-margins) + 4px + 0.8em);
+  }
+}
 .markdown-preview-view.banner.banner-gradient .mod-header + div + div > p > .image-embed:nth-child(1 of .image-embed) {
   -webkit-mask-image: linear-gradient(to bottom, black var(--file-margins), transparent);
 }
@@ -53,19 +62,18 @@ body {
 .markdown-preview-view.banner.banner-title {
   --inline-title-line-height: 3;
 }
-.markdown-preview-view.banner.banner-title .mod-header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
 .markdown-preview-view.banner.banner-title .inline-title {
+  position: absolute;
+  top: calc(var(--banner-height) * 0.5);
+  right: 50%;
+  transform: translate(50%, -50%);
   display: block;
   border: 1px solid var(--color-base-50);
   min-width: 50%;
   background-color: rgba(var(--mono-rgb-0), 0.4);
   backdrop-filter: blur(5px);
   text-shadow: none;
+  text-align: center;
 }
 
 .markdown-preview-view.banner.banner-slant,
@@ -84,19 +92,10 @@ body {
 .markdown-preview-view.banner.banner-slope .mod-header + div + div > p > .image-embed:nth-child(1 of .image-embed) img {
   clip-path: polygon(0 0, 100% 0, 100% calc(100% - var(--banner-angle-height) - var(--banner-slope-border-width)), 0 calc(100% - var(--banner-slope-border-width)));
 }
-.markdown-preview-view.banner.banner-slant .mod-header,
-.markdown-preview-view.banner.banner-slope .mod-header {
-  position: relative;
-}
 .markdown-preview-view.banner.banner-slant .inline-title,
 .markdown-preview-view.banner.banner-slope .inline-title {
   position: absolute;
-  transform: rotate(calc(-1 * var(--banner-slope-angle)));
-  bottom: calc((50% + 50cqw) * sin(var(--banner-slope-angle)) / sin(90deg - var(--banner-slope-angle)));
-  right: 0;
-}
-
-.markdown-preview-view.banner.banner-title.banner-slant .inline-title,
-.markdown-preview-view.banner.banner-title.banner-slope .inline-title {
-  bottom: calc((50% + 50cqw) * sin(var(--banner-slope-angle)) / sin(90deg - var(--banner-slope-angle)) + var(--banner-slope-border-width) + 2px);
+  transform: rotate(calc(-1 * var(--banner-slope-angle))) translateY(-100%);
+  top: calc(anchor(--anchor-preview-section top) + var(--banner-height) - (50% + 50cqw) * sin(var(--banner-slope-angle)) / sin(90deg - var(--banner-slope-angle)) - 10px);
+  right: anchor(--anchor-preview-section right, var(--file-margins));
 }
