--- a/scss/cssclasses/_cssclasses.scss
+++ b/scss/cssclasses/_cssclasses.scss
@@ -3,6 +3,7 @@
 @use 'columns';
 @use 'confidential';
 @use 'footer-img';
+@use 'hide-properties';
 @use 'minimalist';
 @use 'movie-script';
 @use 'newspaper';
