--- a/scss/editor/_properties.scss
+++ b/scss/editor/_properties.scss
@@ -1,10 +1,14 @@
 
 @forward '../shared/workleaves';
 
+body {
+    --properties-columns: 2;
+}
+
 @container metadata (width > 600px) {
     .metadata-content:not(:has(.drag-ghost-hidden)) {
         display: block;
-        column-count: 2;
+        column-count: var(--properties-columns);
         column-rule: 1px dashed var(--metadata-border-color);
     }
 }
