Callout fas-infobox: icon above heading

--- a/publish.css
+++ b/publish.css
@@ -1548,6 +1548,11 @@ body {
   margin-left: 10px;
   object-fit: cover;
   border-radius: 20%;
+  z-index: 1;
+}
+.callout[data-callout=fas-infobox] p:has(img[alt~=icon]) {
+  z-index: 2;
+  position: relative;
 }
 .callout[data-callout=fas-infobox] p:has(img[alt~=icon], img[alt~=cover]) + :is(h1, h2, h3, h4, h5, h6, p) {
   margin-top: 0;
