--- a/scss/editor/embeds/_embeds.scss
+++ b/scss/editor/embeds/_embeds.scss
@@ -1,5 +1,6 @@
 @use 'audio-cassette';
 @use 'embed-faded';
-@use 'embeds-mod-empty';
+@use 'embed-full-width-image';
 @use 'embed-pdfs';
 @use 'embed-wide';
+@use 'embeds-mod-empty';
