--- a/publish.css
+++ b/publish.css
@@ -1778,6 +1778,9 @@ body {
   --callout-fwi-height: 70px;
   --callout-fwi-title-shadow: 0px 0px 0.1em rgb(var(--mono-rgb-0)), 0px 0px 0.2em rgb(var(--mono-rgb-0)), 0px 0px 0.5em rgb(var(--mono-rgb-0));
   --callout-fwi-title-blur: 5px;
+  --fwi-height: var(--callout-fwi-height);
+  --fwi-title-shadow: var(--callout-fwi-title-shadow);
+  --fwi-title-blur: var(--callout-fwi-title-blur);
 }
 
 .callout:is([data-callout=full-width-image], [data-callout=full-w-img], [data-callout=fwi], [data-callout="full-width-panoramic-image-:jack_o_lantern:"], [data-callout=fwpi-jol]) {
@@ -1793,7 +1796,7 @@ body {
   font-size: 0;
 }
 .callout:is([data-callout=full-width-image], [data-callout=full-w-img], [data-callout=fwi], [data-callout="full-width-panoramic-image-:jack_o_lantern:"], [data-callout=fwpi-jol]) img {
-  height: var(--callout-fwi-height);
+  height: var(--fwi-height);
   width: 100%;
   object-fit: cover;
 }
@@ -1806,11 +1809,11 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  text-shadow: var(--callout-fwi-title-shadow);
+  text-shadow: var(--fwi-title-shadow);
   z-index: 1;
 }
 .callout:is([data-callout=full-width-image], [data-callout=full-w-img], [data-callout=fwi], [data-callout="full-width-panoramic-image-:jack_o_lantern:"], [data-callout=fwpi-jol])[data-callout-metadata~=blur] .callout-content {
-  filter: blur(var(--callout-fwi-title-blur));
+  filter: blur(var(--fwi-title-blur));
 }
 .callout:is([data-callout=full-width-image], [data-callout=full-w-img], [data-callout=fwi], [data-callout="full-width-panoramic-image-:jack_o_lantern:"], [data-callout=fwpi-jol])[data-callout-metadata~=grayscale] img {
   filter: grayscale(1);
@@ -3198,16 +3201,16 @@ body {
     background-color: var(--background-modifier-hover);
   }
 }
-.file-embed.mod-empty {
-  --pattern-gap: 23px;
-  --pattern-gap-2: 14px;
-  --pattern-thickness: 1px;
-  --pattern-color: rgba(var(--color-red-rgb), 0.08);
-  background-image: repeating-linear-gradient(-45deg, var(--pattern-color), var(--pattern-color) var(--pattern-thickness), transparent var(--pattern-thickness), transparent calc(var(--pattern-thickness) + var(--pattern-gap))), repeating-linear-gradient(-45deg, var(--pattern-color), var(--pattern-color) var(--pattern-thickness), transparent var(--pattern-thickness), transparent calc(var(--pattern-thickness) + var(--pattern-gap-2))), repeating-linear-gradient(45deg, var(--pattern-color), var(--pattern-color) var(--pattern-thickness), transparent var(--pattern-thickness), transparent calc(var(--pattern-thickness) + var(--pattern-gap))), repeating-linear-gradient(45deg, var(--pattern-color), var(--pattern-color) var(--pattern-thickness), transparent var(--pattern-thickness), transparent calc(var(--pattern-thickness) + var(--pattern-gap-2)));
+.image-embed:is([alt~=full-width-image], [alt~=full-w-img], [alt~=fwi], [alt~="full-width-panoramic-image-:jack_o_lantern:"], [alt~=fwpi-jol]) {
+  --image-shadow-offset: 0;
+  display: block;
+  font-size: 0;
+  width: 100%;
 }
-
-.file-embed.mod-empty:hover {
-  --pattern-color: rgba(var(--color-red-rgb), 0.04);
+.image-embed:is([alt~=full-width-image], [alt~=full-w-img], [alt~=fwi], [alt~="full-width-panoramic-image-:jack_o_lantern:"], [alt~=fwpi-jol]) img {
+  height: var(--fwi-height);
+  width: 100%;
+  object-fit: cover;
 }
 
 body {
@@ -3238,6 +3241,18 @@ body {
   width: var(--w);
   left: calc(50% - var(--w) * 0.5);
   max-width: unset;
+}
+
+.file-embed.mod-empty {
+  --pattern-gap: 23px;
+  --pattern-gap-2: 14px;
+  --pattern-thickness: 1px;
+  --pattern-color: rgba(var(--color-red-rgb), 0.08);
+  background-image: repeating-linear-gradient(-45deg, var(--pattern-color), var(--pattern-color) var(--pattern-thickness), transparent var(--pattern-thickness), transparent calc(var(--pattern-thickness) + var(--pattern-gap))), repeating-linear-gradient(-45deg, var(--pattern-color), var(--pattern-color) var(--pattern-thickness), transparent var(--pattern-thickness), transparent calc(var(--pattern-thickness) + var(--pattern-gap-2))), repeating-linear-gradient(45deg, var(--pattern-color), var(--pattern-color) var(--pattern-thickness), transparent var(--pattern-thickness), transparent calc(var(--pattern-thickness) + var(--pattern-gap))), repeating-linear-gradient(45deg, var(--pattern-color), var(--pattern-color) var(--pattern-thickness), transparent var(--pattern-thickness), transparent calc(var(--pattern-thickness) + var(--pattern-gap-2)));
+}
+
+.file-embed.mod-empty:hover {
+  --pattern-color: rgba(var(--color-red-rgb), 0.04);
 }
 
 .footnotes {
@@ -3429,6 +3444,11 @@ body {
 
 .image-embed[alt~=pink] {
   --image-shadow-color: rgba(var(--color-pink-rgb), 0.2);
+}
+
+img[alt~=black-and-white],
+img[alt~=b-w] {
+  filter: grayscale(100);
 }
 
 .image-embed[alt~=no-shadow] {
