--- a/scss/editor/_image.scss
+++ b/scss/editor/_image.scss
@@ -30,6 +30,11 @@ body {
     .image-embed[alt~="#{$key}"] { --image-shadow-color: rgba(var(--color-#{$key}-rgb), 0.2); }
 }
 
+img[alt~="black-and-white"],
+img[alt~="b-w"] {
+    filter: grayscale(100);
+}
+
 .image-embed[alt~="no-shadow"] {
     --image-shadow-offset: 0;
 }
