--- a/snippets/editor/callouts/callout-full-width-image.css
+++ b/snippets/editor/callouts/callout-full-width-image.css
@@ -6,6 +6,9 @@ body {
   --callout-fwi-height: 70px;
   --callout-fwi-title-shadow: 0px 0px 0.1em rgb(var(--mono-rgb-0)), 0px 0px 0.2em rgb(var(--mono-rgb-0)), 0px 0px 0.5em rgb(var(--mono-rgb-0));
   --callout-fwi-title-blur: 5px;
+  --fwi-height: var(--callout-fwi-height);
+  --fwi-title-shadow: var(--callout-fwi-title-shadow);
+  --fwi-title-blur: var(--callout-fwi-title-blur);
 }
 
 .callout:is([data-callout=full-width-image], [data-callout=full-w-img], [data-callout=fwi], [data-callout="full-width-panoramic-image-:jack_o_lantern:"], [data-callout=fwpi-jol]) {
@@ -21,7 +24,7 @@ body {
   font-size: 0;
 }
 .callout:is([data-callout=full-width-image], [data-callout=full-w-img], [data-callout=fwi], [data-callout="full-width-panoramic-image-:jack_o_lantern:"], [data-callout=fwpi-jol]) img {
-  height: var(--callout-fwi-height);
+  height: var(--fwi-height);
   width: 100%;
   object-fit: cover;
 }
@@ -34,11 +37,11 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  text-shadow: var(--callout-fwi-title-shadow);
+  text-shadow: var(--fwi-title-shadow);
   z-index: 1;
 }
 .callout:is([data-callout=full-width-image], [data-callout=full-w-img], [data-callout=fwi], [data-callout="full-width-panoramic-image-:jack_o_lantern:"], [data-callout=fwpi-jol])[data-callout-metadata~=blur] .callout-content {
-  filter: blur(var(--callout-fwi-title-blur));
+  filter: blur(var(--fwi-title-blur));
 }
 .callout:is([data-callout=full-width-image], [data-callout=full-w-img], [data-callout=fwi], [data-callout="full-width-panoramic-image-:jack_o_lantern:"], [data-callout=fwpi-jol])[data-callout-metadata~=grayscale] img {
   filter: grayscale(1);
