--- a/scss/editor/code/_code-poem.scss
+++ b/scss/editor/code/_code-poem.scss
@@ -48,3 +48,11 @@ pre.language-poem-floral {
         right: var(--floral-width);
     }
 }
+
+@media print {
+    .print pre.language-poem-floral {
+        @include poem.poem-floral-pseudo-print;
+        
+        break-inside: avoid;
+    }
+}
