--- a/snippets/editor/callouts/callout-paper-fold.css
+++ b/snippets/editor/callouts/callout-paper-fold.css
@@ -19,6 +19,11 @@ body {
   --paper-fold-corner-angle-hover: 60deg;
 }
 
+.print {
+  --paper-fold-corner-diag: 25px;
+  --paper-fold-corner-angle: 70deg;
+}
+
 .is-mobile {
   --paper-fold-corner-diag: 25px;
   --paper-fold-corner-angle: 70deg;
