--- a/scss/editor/callouts/_callout-grid.scss
+++ b/scss/editor/callouts/_callout-grid.scss
@@ -70,3 +70,9 @@
         grid-template-columns: repeat(2, 1fr);
     }
 }
+
+@media print {
+    .print .markdown-preview-view [data-callout="grid"] > .callout-content {
+        display: grid !important;
+    }
+}
