--- a/publish.css
+++ b/publish.css
@@ -1199,7 +1199,7 @@ body {
   position: absolute;
   top: -1px;
   bottom: -1px;
-  width: calc(40% - var(--callout-content-padding));
+  width: calc(40% - var(--callout-content-padding) + 3px);
   z-index: -1;
   background-size: 100% 50%, 100% 50%;
   background-position: center top, center bottom;
@@ -1237,6 +1237,11 @@ body {
   background-position: center top, center calc(100% - 1px);
 }
 
+@media print {
+  .print .callout[data-callout=conversation-outline] > .callout-content > *::before {
+    width: calc(40% - var(--callout-content-padding));
+  }
+}
 .callout[data-callout=conversation-minimalist] {
   --callout-border-width: 0;
   --callout-content-padding: 0;
