--- a/scss/cssclasses/_banner.scss
+++ b/scss/cssclasses/_banner.scss
@@ -2,47 +2,81 @@
 @forward '../shared/markdown-anchor';
 
 $img-embed-sel: '.mod-header + div + div > p > .image-embed:nth-child(1 of .image-embed)';
+$img-embed-sel-print: '.mod-frontmatter + div > p > .image-embed:nth-child(1 of .image-embed)';
 
 body {
     --banner-height: 300px;
-    --banner-title-shadow: 0px 0px 0.1em rgb(var(--mono-rgb-0)), 0px 0px 0.2em rgb(var(--mono-rgb-0)), 0px 0px 0.5em rgb(var(--mono-rgb-0));
+    --banner-title-shadow-size: 0.5em;
+    --banner-title-shadow: 0px 0px calc(var(--banner-title-shadow-size) * 0.2) rgb(var(--mono-rgb-0)), 0px 0px calc(var(--banner-title-shadow-size) * 0.5) rgb(var(--mono-rgb-0)), 0px 0px var(--banner-title-shadow-size) rgb(var(--mono-rgb-0));
     --banner-slope-angle: 4deg;
     --banner-slope-border-width: 5px;
     --banner-slope-border-color: var(--color-accent);
     --banner-width: calc(100cqw + 2 * var(--file-margins));
+    --banner-print-width: full-bleed;
+}
+
+@mixin image-banner {
+    --image-shadow-offset: 0;
+    display: block;
+
+    position: absolute;
+    z-index: -1;
+
+    width: var(--banner-width);
+    height: var(--banner-height);
+
+
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    + br {
+        display: none;
+    }
 }
 
 .markdown-preview-view.banner {
     --inline-title-margin-bottom: 0;
 
     #{$img-embed-sel} {
-        --image-shadow-offset: 0;
-        display: block;
-
-        position: absolute;
         top: 0;
         left: 0;
-        z-index: -1;
-
-        width: var(--banner-width);
-        height: var(--banner-height);
-
-
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-
-        + br {
-            display: none;
-        }
+        @include image-banner;
     }
 
     .inline-title {
         text-shadow: var(--banner-title-shadow);
     }
 
+}
+
+@media print {
+    .print .markdown-preview-view.banner #{$img-embed-sel-print} {
+        @include image-banner;
+    }
+    @container not style(--banner-print-width: full-bleed) {
+        .print {
+            --banner-width: calc(100cqw);
+        }
+        .print .markdown-preview-view.banner #{$img-embed-sel-print} {
+            top: var(--file-margins);
+            left: var(--file-margins);
+        }
+        .print .markdown-preview-view.banner {
+            padding-top: calc(var(--banner-height) + var(--file-margins));
+        }
+    }
+    @container style(--banner-print-width: full-bleed) {
+        .print .markdown-preview-view.banner #{$img-embed-sel-print} {
+            top: 0;
+            left: 0;
+        }
+        .print .markdown-preview-view.banner {
+            padding-top: var(--banner-height);
+        }
+    }
 }
 
 // Properties hidden
@@ -61,9 +95,19 @@ body {
     }
 }
 
+@mixin image-banner-gradient {
+    -webkit-mask-image: linear-gradient(to bottom, black var(--file-margins), transparent);
+}
+
 .markdown-preview-view.banner.banner-gradient {
     #{$img-embed-sel} {
-        -webkit-mask-image: linear-gradient(to bottom, black var(--file-margins), transparent);
+        @include image-banner-gradient;
+    }
+}
+
+@media print {
+    .print .markdown-preview-view.banner #{$img-embed-sel-print} {
+        @include image-banner-gradient;
     }
 }
 
@@ -85,6 +129,15 @@ body {
     }
 }
 
+@mixin image-banner-slope {
+    clip-path: polygon(0 0, 100% 0, 100% calc(100% - var(--banner-angle-height)), 0 100%);
+    background-color: var(--banner-slope-border-color);
+
+    img {
+        clip-path: polygon(0 0, 100% 0, 100% calc(100% - var(--banner-angle-height) - var(--banner-slope-border-width)), 0 calc(100% - var(--banner-slope-border-width)));
+    }
+}
+
 .markdown-preview-view.banner.banner-slant,
 .markdown-preview-view.banner.banner-slope {
     --inline-title-size: 4em;
@@ -94,21 +147,26 @@ body {
     --banner-angle-height: calc(var(--banner-angle-diag) / sin(90deg - var(--banner-slope-angle)));
 
     #{$img-embed-sel} {
-        clip-path: polygon(0 0, 100% 0, 100% calc(100% - var(--banner-angle-height)), 0 100%);
-        background-color: var(--banner-slope-border-color);
-
-        img {
-            clip-path: polygon(0 0, 100% 0, 100% calc(100% - var(--banner-angle-height) - var(--banner-slope-border-width)), 0 calc(100% - var(--banner-slope-border-width)));
-        }
+        @include image-banner-slope;
     }
 
     .inline-title {
         position: absolute;
-        transform: rotate(calc(-1 * var(--banner-slope-angle))) translateY(-100%);
-        top: calc(anchor(--anchor-preview-section top) + var(--banner-height) - (50% + 50cqw) * sin(var(--banner-slope-angle)) / sin(90deg - var(--banner-slope-angle)) - 10px);
+        transform: rotate(calc(-1 * var(--banner-slope-angle)));
+        transform-origin: bottom left;
+        top: calc(anchor(--anchor-preview-section top) + var(--banner-height) - var(--file-margins) - 1em - var(--banner-title-shadow-size));
         right: anchor(--anchor-preview-section right, var(--file-margins));
+        left: 0;
+        text-align: right;
     }
 }
+
+@media print {
+    .print .markdown-preview-view.banner #{$img-embed-sel-print} {
+        @include image-banner-slope;
+    }
+}
+
 
 .markdown-source-view.banner.banner-edit-hide {
     .cm-contentContainer > div > .image-embed:nth-child(1 of div.image-embed) {
